--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,6 @@
 
     <string name="menu_home">Home</string>
     <string name="menu_settings">Settings</string>
-    <string name="menu_rules">Rules</string>
+    <string name="menu_login">Login</string>
     <string name="room_icon">room icon</string>
 </resources>
