--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,13 @@
     <string name="menu_settings">Settings</string>
     <string name="menu_login">Login</string>
     <string name="room_icon">room icon</string>
+
+    <!--strings for Login fragment-->
+    <string name="button_connect_text">Connect</string>
+    <string name="button_prefill_text">Prefill</string>
+    <string name="button_clean_text">Clean</string>
+    <string name="server_uri_text">Server URI</string>
+    <string name="client_id_text">Client ID</string>
+    <string name="username_text">Username</string>
+    <string name="password_text">Password</string>
 </resources>
