--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
 
     <string name="menu_home">Home</string>
     <string name="menu_settings">Settings</string>
-    <string name="menu_login">Login</string>
+    <string name="menu_logout">Logout</string>
     <string name="room_icon">room icon</string>
 
     <!--strings for Login fragment-->
