--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,45 @@
     <string name="button_clean_text">Clean</string>
     <string name="username_text">Username</string>
     <string name="password_text">Password</string>
+
+    <!--TODO sistemare stringhe-->
+    <!-- Seetings -->
+    <string name="fragment_settings_title" translatable="false">Settings</string>
+    <string name="lang_pl" translatable="false">Polish</string>
+    <string name="lang_en" translatable="false">English</string>
+    <string name="lang_es" translatable="false">Spanish</string>
+    <string name="lang_de" translatable="false">German</string>
+    <string name="lang_cz" translatable="false">Czech</string>
+    <string name="language_array_title">Language</string>
+    <string-array name="language_array">
+        <item>@string/lang_pl</item>
+        <item>@string/lang_en</item>
+        <item>@string/lang_es</item>
+        <item>@string/lang_de</item>
+        <item>@string/lang_cz</item>
+    </string-array>
+
+    <string name="theme_day">Day</string>
+    <string name="theme_night">Night</string>
+    <string name="theme_array_title">Theme</string>
+    <string-array name="theme_array">
+        <item>@string/theme_day</item>
+        <item>@string/theme_night</item>
+    </string-array>
+
+    <!-- Preference Titles -->
+    <string name="ui">UI</string>
+    <string name="theme_mode">Dark Mode</string>
+    <string name="theme_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>
+
+    <!-- Dark Mode ListPreference -->
+    <string-array name="theme_mode_entries">
+        <item>Day mode</item>
+        <item>Dark mode</item>
+    </string-array>
+
+    <string-array name="theme_mode_values">
+        <item>Day mode</item>
+        <item>Dark mode</item>
+    </string-array>
 </resources>
