--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,20 +21,12 @@
     <string name="password_text">Password</string>
 
     <!--TODO sistemare stringhe-->
-    <!-- Seetings -->
-    <string name="fragment_settings_title" translatable="false">Settings</string>
-    <string name="lang_pl" translatable="false">Polish</string>
-    <string name="lang_en" translatable="false">English</string>
-    <string name="lang_es" translatable="false">Spanish</string>
-    <string name="lang_de" translatable="false">German</string>
-    <string name="lang_cz" translatable="false">Czech</string>
-    <string name="language_array_title" translatable="false">Language</string>
+    <string name="lang_it">Italian</string>
+    <string name="lang_en">English</string>
+    <string name="language_array_title">Language</string>
     <string-array name="language_array">
-        <item>@string/lang_pl</item>
+        <item>@string/lang_it</item>
         <item>@string/lang_en</item>
-        <item>@string/lang_es</item>
-        <item>@string/lang_de</item>
-        <item>@string/lang_cz</item>
     </string-array>
 
     <string name="theme_day" translatable="false">Day</string>
