Added theme preference (not working)

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -23,4 +23,6 @@
     <string name="lang_it">Italiano</string>
     <string name="lang_en">Inglese</string>
     <string name="language_array_title">Lingua</string>
+    <string name="theme_day">Giorno</string>
+    <string name="theme_night">Notte</string>
 </resources>
