--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,15 +33,18 @@
         <item>en</item>
     </string-array>
 
+    <string name="theme_system">System</string>
     <string name="theme_day">Day</string>
     <string name="theme_night">Night</string>
-    <string name="theme_array_title" translatable="false">Theme</string>
+    <string name="theme_array_title">Theme</string>
     <string-array name="theme_array">
+        <item>@string/theme_system</item>
         <item>@string/theme_day</item>
         <item>@string/theme_night</item>
     </string-array>
 
     <string-array name="theme_array_entry">
+        <item>system</item>
         <item>day</item>
         <item>night</item>
     </string-array>
