--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,14 +21,17 @@
     <string name="password_text">Password</string>
 
     <!--TODO sistemare stringhe-->
+    <string name="lang_system">System</string>
     <string name="lang_it">Italian</string>
     <string name="lang_en">English</string>
     <string name="language_array_title">Language</string>
     <string-array name="language_array">
+        <item>@string/lang_system</item>
         <item>@string/lang_it</item>
         <item>@string/lang_en</item>
     </string-array>
     <string-array name="language_array_entry">
+        <item>system</item>
         <item>it</item>
         <item>en</item>
     </string-array>
