--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="device_shutter">Shutter</string>
     <string name="device_temperature">Temperature</string>
     <string name="device_unknown">Unknown</string>
+    <string name="logout_notify">Logout</string>
 
     <string-array name="theme_array">
         <item>@string/theme_system</item>
