--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,17 +10,15 @@
 
     <string name="menu_home">Home</string>
     <string name="menu_settings">Settings</string>
-    <string name="menu_logout">Logout</string>
+    <string name="menu_login">Login</string>
     <string name="room_icon">room icon</string>
 
-    <!--strings for Login fragment-->
     <string name="button_connect_text">Connect</string>
     <string name="button_prefill_text">Prefill</string>
     <string name="button_clean_text">Clean</string>
     <string name="username_text">Username</string>
     <string name="password_text">Password</string>
 
-    <!--TODO sistemare stringhe-->
     <string name="lang_system">System</string>
     <string name="lang_it">Italian</string>
     <string name="lang_en">English</string>
